# deepvision

./: .gitignore  README.md  pyproject.toml  train.py
configs/: config.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml  tiny_imagenet.yaml
configs/model/: resnet18.yaml  resnet34.yaml
outputs/2025-08-01/03-34-52/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-01/03-42-42/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-01/03-45-18/.hydra/: hydra.yaml
outputs/2025-08-01/03-45-56/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-08-01/03-46-11/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/core/: datamodule.py  module.py  trainer.py
src/deepvision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/eval/: flops.py  metrics.py
src/models/: resnet.py  simple_cnn.py
src/utils/: registry.py
tests/: test_metrics.py
